[gd_scene load_steps=8 format=3 uid="uid://t1s1qp1nrblc"]

[ext_resource type="Script" path="res://scripts/UI/ScoreScreen.gd" id="1_0h8f4"]
[ext_resource type="Texture2D" uid="uid://bgox1nmwjs8yx" path="res://assets/gfx/Menu/Backgrounds/DeathScreen.png" id="1_xn208"]
[ext_resource type="FontFile" uid="uid://djtmfhr34omsr" path="res://assets/gfx/Fonts/CorrectionBrush.ttf" id="3_h6xbi"]
[ext_resource type="Texture2D" uid="uid://rcamaqrfc2v7" path="res://assets/gfx/UI/Buttons/NextButton.png" id="4_lhe33"]
[ext_resource type="Texture2D" uid="uid://dubukc0o65aov" path="res://assets/gfx/UI/Buttons/Menu.png" id="5_rg0uv"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_g2dt0"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_y25yq"]

[node name="ScoreScreen" type="Node2D"]
script = ExtResource("1_0h8f4")

[node name="Sprite2D" type="Sprite2D" parent="."]
modulate = Color(0.305882, 0.305882, 0.305882, 1)
position = Vector2(576, 324)
scale = Vector2(0.6, 0.6)
texture = ExtResource("1_xn208")

[node name="Label" type="Label" parent="."]
offset_left = 155.0
offset_top = 69.0
offset_right = 998.0
offset_bottom = 228.0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 10
theme_override_fonts/font = ExtResource("3_h6xbi")
theme_override_font_sizes/font_size = 73
text = "Score: 9999
Enter Name"
horizontal_alignment = 1

[node name="LineEdit" type="LineEdit" parent="."]
offset_left = 362.0
offset_top = 275.0
offset_right = 906.0
offset_bottom = 519.0
auto_translate = false
theme_override_fonts/font = ExtResource("3_h6xbi")
theme_override_font_sizes/font_size = 206
theme_override_styles/normal = SubResource("StyleBoxEmpty_g2dt0")
theme_override_styles/focus = SubResource("StyleBoxEmpty_y25yq")
placeholder_text = "_ _ _"
max_length = 3
context_menu_enabled = false
shortcut_keys_enabled = false
middle_mouse_paste_enabled = false
selecting_enabled = false
deselect_on_focus_loss_enabled = false
drag_and_drop_selection_enabled = false

[node name="Sprite2D2" type="Sprite2D" parent="."]
modulate = Color(0, 0, 0, 0.372549)
self_modulate = Color(0.34902, 0.34902, 0.34902, 1)
position = Vector2(568, 396)
scale = Vector2(6.40625, 3.35156)

[node name="Forward" type="TextureButton" parent="."]
offset_left = 750.0
offset_top = 256.0
offset_right = 1250.0
offset_bottom = 756.0
scale = Vector2(0.23, 0.23)
pivot_offset = Vector2(247, 247)
texture_normal = ExtResource("4_lhe33")
ignore_texture_size = true
stretch_mode = 3

[node name="Back" type="TextureButton" parent="."]
offset_left = -72.0
offset_top = 256.0
offset_right = 428.0
offset_bottom = 756.0
scale = Vector2(0.23, 0.23)
pivot_offset = Vector2(247, 247)
texture_normal = ExtResource("4_lhe33")
ignore_texture_size = true
stretch_mode = 3
flip_h = true
metadata/_edit_use_anchors_ = true

[node name="Mainbutton" type="TextureButton" parent="."]
offset_left = -210.0
offset_top = 256.0
offset_right = 1316.0
offset_bottom = 864.0
scale = Vector2(0.18, 0.18)
pivot_offset = Vector2(766.667, 333.333)
size_flags_horizontal = 4
size_flags_vertical = 4
texture_normal = ExtResource("5_rg0uv")
ignore_texture_size = true
stretch_mode = 3

[connection signal="ready" from="LineEdit" to="." method="_on_line_edit_ready"]
[connection signal="text_submitted" from="LineEdit" to="." method="_on_line_edit_text_submitted"]
[connection signal="mouse_entered" from="Forward" to="." method="_on_forward_mouse_entered"]
[connection signal="mouse_exited" from="Forward" to="." method="_on_forward_mouse_exited"]
[connection signal="pressed" from="Forward" to="." method="_on_forward_pressed"]
[connection signal="mouse_entered" from="Back" to="." method="_on_back_mouse_entered"]
[connection signal="mouse_exited" from="Back" to="." method="_on_back_mouse_exited"]
[connection signal="pressed" from="Back" to="." method="_on_back_pressed"]
[connection signal="mouse_entered" from="Mainbutton" to="." method="_on_mainbutton_mouse_entered"]
[connection signal="mouse_exited" from="Mainbutton" to="." method="_on_mainbutton_mouse_exited"]
[connection signal="pressed" from="Mainbutton" to="." method="_on_mainbutton_pressed"]
